// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`setErrors method sets proper errors 1`] = `
<div class="password-change">
  <div class="password-change__input">
    <input-field-stub value="" name="oldPassword" placeholder="Old Password" autocomplete="current-password" required="required" type="password" theme="light"></input-field-stub>
  </div>
  <div class="password-change__input">
    <password-input-stub value="" autocomplete="new-password"></password-input-stub>
  </div>
  <div class="password-change__input">
    <input-field-stub value="" name="passwordConfirmation" placeholder="Confirm Password" autocomplete="new-password" required="required" type="password" theme="light"></input-field-stub>
  </div>
</div>
`;

exports[`validateForm method shows validation error when confirm password is empty 1`] = `
<div class="password-change">
  <div class="password-change__input">
    <input-field-stub value="" name="oldPassword" placeholder="Old Password" autocomplete="current-password" required="required" type="password" theme="light"></input-field-stub>
  </div>
  <div class="password-change__input">
    <password-input-stub value="Password1" autocomplete="new-password"></password-input-stub>
  </div>
  <div class="password-change__input">
    <input-field-stub value="" name="passwordConfirmation" placeholder="Confirm Password" autocomplete="new-password" required="required" type="password" theme="light" error="Confirm password cannot be empty"></input-field-stub>
  </div>
</div>
`;

exports[`validateForm method shows validation error when confirm password is not equal to password 1`] = `
<div class="password-change">
  <div class="password-change__input">
    <input-field-stub value="" name="oldPassword" placeholder="Old Password" autocomplete="current-password" required="required" type="password" theme="light"></input-field-stub>
  </div>
  <div class="password-change__input">
    <password-input-stub value="Password1" autocomplete="new-password"></password-input-stub>
  </div>
  <div class="password-change__input">
    <input-field-stub value="Password2" name="passwordConfirmation" placeholder="Confirm Password" autocomplete="new-password" required="required" type="password" theme="light" error="You must enter the same password"></input-field-stub>
  </div>
</div>
`;

exports[`validateForm method shows validation error when password is invalid 1`] = `
<div class="password-change">
  <div class="password-change__input">
    <input-field-stub value="" name="oldPassword" placeholder="Old Password" autocomplete="current-password" required="required" type="password" theme="light"></input-field-stub>
  </div>
  <div class="password-change__input">
    <password-input-stub value="" autocomplete="new-password" error="Please type in a password"></password-input-stub>
  </div>
  <div class="password-change__input">
    <input-field-stub value="" name="passwordConfirmation" placeholder="Confirm Password" autocomplete="new-password" required="required" type="password" theme="light" error="Confirm password cannot be empty"></input-field-stub>
  </div>
</div>
`;

exports[`with default props matches snapshot 1`] = `
<div class="password-change">
  <!---->
  <div class="password-change__input">
    <password-input-stub value="" autocomplete="new-password"></password-input-stub>
  </div>
  <div class="password-change__input">
    <input-field-stub value="" name="passwordConfirmation" placeholder="Confirm Password" autocomplete="new-password" required="required" type="password" theme="light"></input-field-stub>
  </div>
</div>
`;

exports[`with old password form matches snapshot 1`] = `
<div class="password-change">
  <div class="password-change__input">
    <input-field-stub value="" name="oldPassword" placeholder="Old Password" autocomplete="current-password" required="required" type="password" theme="light"></input-field-stub>
  </div>
  <div class="password-change__input">
    <password-input-stub value="" autocomplete="new-password"></password-input-stub>
  </div>
  <div class="password-change__input">
    <input-field-stub value="" name="passwordConfirmation" placeholder="Confirm Password" autocomplete="new-password" required="required" type="password" theme="light"></input-field-stub>
  </div>
</div>
`;
